Make class loader more roboust in the face of weird path/file name characters.  Prefer URI over URLEncoder/URLDecoder.