@@ -19,7 +19,7 @@ package com.comoyo.emjar;
 import java.io.File;
 import java.io.InputStream;
 import java.net.JarURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.Map;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
@@ -42,7 +42,7 @@ public class OndemandEmbeddedJarTest
             = scanner.scan();
         assertNotNull("Descriptor returned from ZipScanner was null", desc);
         return new OndemandEmbeddedJar.Connection(
-            new URL("jar:file:" + root.getPath() + "!/" + jarName + "!/"),
+            new URI("jar:file", root.getPath() + "!/" + jarName + "!/", null).toURL(),
             root.getPath(),
             desc.get(jarName),
             entryName);
